--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "cutthebill-client",
 	"version": "1.0.0",
 	"description": "Is an utility for CutTheBill that allows us make HTTP request for Web Scrapping",
+	"bin": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
 		"start": "node dist/index.js",
